--- a/Public/Templates/AdminLTE/html/base.html
+++ b/Public/Templates/AdminLTE/html/base.html
@@ -17,7 +17,7 @@
   <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
       <include file="Public/Templates/AdminLTE/html/main-header.html" />
-      <block name="main-sidebar">main-sidebar</block>
+      <include file="Public/Templates/AdminLTE/html/main-sidebar.html" />
       <block name="content-wrapper">content-wrapper</block>
       <include file="Public/Templates/AdminLTE/html/main-footer.html" />
       <include file="Public/Templates/AdminLTE/html/control-sidebar.html" />  
