--- a/Public/Templates/AdminLTE/html/main-header.html
+++ b/Public/Templates/AdminLTE/html/main-header.html
@@ -205,14 +205,14 @@
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
-            <span class="hidden-xs">Alexander Pierce</span>
+            <span class="hidden-xs">{$login_user.username}</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
               <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
               <p>
-                Alexander Pierce - Web Developer
+                {$login_user.username} - Web Developer
                 <small>Member since Nov. 2012</small>
               </p>
             </li>
