--- a/Public/Templates/AdminLTE/html/forgetPwd.html
+++ b/Public/Templates/AdminLTE/html/forgetPwd.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Registration Page</title>
+    <title>AdminLTE 2 | Forget Password Page</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -24,30 +24,17 @@
         <script src="__PUBLIC__/plugins/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body class="hold-transition register-page">
-    <div class="register-box">
-      <div class="register-logo">
+  <body class="hold-transition login-page">
+    <div class="login-box">
+      <div class="login-logo">
         <a href="index2.html"><b>Admin</b>LTE</a>
-      </div>
-
-      <div class="register-box-body">
-        <p class="login-box-msg">Register a new membership</p>
+      </div><!-- /.login-logo -->
+      <div class="login-box-body">
+        <p class="login-box-msg">Send to maixbox</p>
         <form action="" method="post">
-          <div class="form-group has-feedback">
-            <input name="realname" type="text" class="form-control" placeholder="Full name">
-            <span class="glyphicon glyphicon-user form-control-feedback"></span>
-          </div>
           <div class="form-group has-feedback">
             <input name="email" type="email" class="form-control" placeholder="Email">
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-          </div>
-          <div class="form-group has-feedback">
-            <input name="password" type="password" class="form-control" placeholder="Password">
-            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-          </div>
-          <div class="form-group has-feedback">
-            <input name="re_password" type="password" class="form-control" placeholder="Retype password">
-            <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
           </div>
           <div class="row">
             <div class="col-xs-4">
@@ -62,14 +49,16 @@
             </div>
             <div class="col-xs-4">
               <input name="redirect_url" type="hidden" class="form-control" value="{$redirect_url}">
-              <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+              <button type="submit" class="btn btn-primary btn-block btn-flat">Send</button>
             </div><!-- /.col -->
           </div>
         </form>
 
-        <a href="{:U('Auth/Login/index')}" class="text-center">I already have a membership</a>
-      </div><!-- /.form-box -->
-    </div><!-- /.register-box -->
+        <a href="{:U('Auth/Login/index')}">Back to sign in</a><br>
+        <a href="{:U('Auth/Register/index')}" class="text-center">Register a new membership</a>
+
+      </div><!-- /.login-box-body -->
+    </div><!-- /.login-box -->
 
     <!-- jQuery 2.1.4 -->
     <script src="__PUBLIC__/plugins/jQuery/jQuery-2.1.4.min.js"></script>
