--- a/Public/Templates/AdminLTE/html/login.html
+++ b/Public/Templates/AdminLTE/html/login.html
@@ -48,7 +48,7 @@
             </div>
             <div class="col-xs-4">
               <div class="form-group has-feedback">
-                <img src="{:U('Auth/Verify/index')}">
+                <img class="v_code_img" src="{:U('Auth/Verify/index')}">
               </div>
             </div>
             <div class="col-xs-4">
@@ -58,13 +58,7 @@
           </div>
         </form>
 
-        <div class="social-auth-links text-center">
-          <p>- OR -</p>
-          <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
-          <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using Google+</a>
-        </div><!-- /.social-auth-links -->
-
-        <a href="#">I forgot my password</a><br>
+        <a href="{:U('Auth/Account/forgetPwd')}">I forgot my password</a><br>
         <a href="{:U('Auth/Register/index')}" class="text-center">Register a new membership</a>
 
       </div><!-- /.login-box-body -->
@@ -82,6 +76,13 @@
           checkboxClass: 'icheckbox_square-blue',
           radioClass: 'iradio_square-blue',
           increaseArea: '20%' // optional
+        });
+      });
+    </script>
+    <script>
+      $(function () {
+        $('.v_code_img').on('click', function(event) {
+          $(this).attr('src', $(this).attr('src').split('?')[0]+"?timestamp="+event.timeStamp);
         });
       });
     </script>
