--- a/Public/Templates/AdminLTE/html/resetPwd.html
+++ b/Public/Templates/AdminLTE/html/resetPwd.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Registration Page</title>
+    <title>AdminLTE 2 | Reset Password Page</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -31,16 +31,8 @@
       </div>
 
       <div class="register-box-body">
-        <p class="login-box-msg">Register a new membership</p>
+        <p class="login-box-msg">Reset password</p>
         <form action="" method="post">
-          <div class="form-group has-feedback">
-            <input name="realname" type="text" class="form-control" placeholder="Full name">
-            <span class="glyphicon glyphicon-user form-control-feedback"></span>
-          </div>
-          <div class="form-group has-feedback">
-            <input name="email" type="email" class="form-control" placeholder="Email">
-            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-          </div>
           <div class="form-group has-feedback">
             <input name="password" type="password" class="form-control" placeholder="Password">
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
@@ -50,24 +42,14 @@
             <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
           </div>
           <div class="row">
-            <div class="col-xs-4">
-              <div class="form-group has-feedback">
-                <input name="v_code" type="text" class="form-control" placeholder="Code">
-              </div>
-            </div>
-            <div class="col-xs-4">
-              <div class="form-group has-feedback">
-                <img class="v_code_img" src="{:U('Auth/Verify/index')}">
-              </div>
-            </div>
-            <div class="col-xs-4">
-              <input name="redirect_url" type="hidden" class="form-control" value="{$redirect_url}">
-              <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+            <div class="col-xs-4 col-xs-offset-8">
+              <button type="submit" class="btn btn-primary btn-block btn-flat">Submit</button>
             </div><!-- /.col -->
           </div>
         </form>
 
-        <a href="{:U('Auth/Login/index')}" class="text-center">I already have a membership</a>
+        <a href="{:U('Auth/Login/index')}">Back to sign in</a><br>
+        <a href="{:U('Auth/Register/index')}" class="text-center">Register a new membership</a>
       </div><!-- /.form-box -->
     </div><!-- /.register-box -->
 
@@ -83,13 +65,6 @@
           checkboxClass: 'icheckbox_square-blue',
           radioClass: 'iradio_square-blue',
           increaseArea: '20%' // optional
-        });
-      });
-    </script>
-    <script>
-      $(function () {
-        $('.v_code_img').on('click', function(event) {
-          $(this).attr('src', $(this).attr('src').split('?')[0]+"?timestamp="+event.timeStamp);
         });
       });
     </script>
