--- a/Public/Templates/AdminLTE/html/base.html
+++ b/Public/Templates/AdminLTE/html/base.html
@@ -6,13 +6,28 @@
     <title><block name="title">title</block></title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <block name="css-files">css-files</block>
+    <!-- Bootstrap 3.3.5 -->
+    <link rel="stylesheet" href="__PUBLIC__/plugins/bootstrap/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="__PUBLIC__/plugins/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="__PUBLIC__/plugins/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="__PUBLIC__/Templates/AdminLTE/css/AdminLTE.min.css">
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
+         folder instead of downloading all of them to reduce the load. -->
+    <link rel="stylesheet" href="__PUBLIC__/Templates/AdminLTE/css/skins/_all-skins.min.css">
+    <!-- iCheck for checkboxes and radio inputs -->
+    <link rel="stylesheet" href="__PUBLIC__/plugins/iCheck/all.css">
+    <!-- Select2 -->
+    <link rel="stylesheet" href="__PUBLIC__/plugins/select2/select2.min.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="__PUBLIC__/plugins/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="__PUBLIC__/plugins/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <block name="css-files">css-files</block>
   </head>
   <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
@@ -22,6 +37,26 @@
       <include file="Public/Templates/AdminLTE/html/main-footer.html" />
       <include file="Public/Templates/AdminLTE/html/control-sidebar.html" />  
     </div><!-- ./wrapper -->
+    <!-- jQuery 2.1.4 -->
+    <script src="__PUBLIC__/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+    <!-- Bootstrap 3.3.5 -->
+    <script src="__PUBLIC__/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <!-- SlimScroll -->
+    <script src="__PUBLIC__/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+    <!-- FastClick -->
+    <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
+    <!-- iCheck 1.0.1 -->
+    <script src="__PUBLIC__/plugins/iCheck/icheck.min.js"></script>
+    <!-- Select2 -->
+    <script src="__PUBLIC__/plugins/select2/select2.full.min.js"></script>
+    <!-- Virgil -->
+    <script src="__PUBLIC__/plugins/virgil/js/virgil.js"></script>
     <block name="js-files">js-files</block>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/pages/common.js"></script>
+
   </body>
 </html>
