--- a/Public/Templates/AdminLTE/html/main-sidebar.html
+++ b/Public/Templates/AdminLTE/html/main-sidebar.html
@@ -67,7 +67,7 @@
         </a>
         <ul class="treeview-menu">
           <li <if condition="$module eq 'Article' AND $controller eq 'Index' AND $action eq 'index'">class="active"</if>><a href="{:U('Article/Index/index')}"><i class="fa fa-circle-o"></i> Article </a></li>
-          <li <if condition="$module eq 'Article' AND $controller eq 'Category' AND $action eq 'video'">class="active"</if>><a href="{:U('Article/Category/index')}"><i class="fa fa-circle-o"></i> Category </a></li>
+          <li <if condition="$module eq 'Article' AND $controller eq 'Category' AND $action eq 'index'">class="active"</if>><a href="{:U('Article/Category/index')}"><i class="fa fa-circle-o"></i> Category </a></li>
         </ul>
       </li>
     </ul>
