--- a/Public/Templates/AdminLTE/html/articleList.html
+++ b/Public/Templates/AdminLTE/html/articleList.html
@@ -16,105 +16,122 @@
     <link rel="stylesheet" href="__PUBLIC__/Templates/AdminLTE/css/skins/_all-skins.min.css">
 </block>
 <block name="content-wrapper">
-	<!-- Content Wrapper. Contains page content -->
-	<div class="content-wrapper">
-		<!-- Content Header (Page header) -->
-		<section class="content-header">
-		  <h1>
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <h1>
 		    Article Data List
 		    <small>articleList</small>
 		  </h1>
-		  <ol class="breadcrumb">
-		    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-		    <li><a href="#">Admin</a></li>
-		    <li class="active">Article Data List</li>
-		  </ol>
-		</section>
-
-		<!-- Main content -->
-		<section class="content">
-		  <div class="row">
-		    <div class="col-xs-12">
-		      <div class="box">
-		        <div class="box-header">
-		          <h3 class="box-title">Article Data List</h3>
-		        </div><!-- /.box-header -->
-		        <div class="box-body">
-		          <table id="articleList" class="table table-bordered table-hover">
-		            <thead>
-		              <tr>
-		                <th>id</th>
-		                <th>title</th>
-		                <th>short_title</th>
-		                <th>author</th>
-		                <th>owner_uid</th>
-		                <th>create_time</th>
-		                <th>update_time</th>
-		              </tr>
-		            </thead>
-		            <tbody>
-		            </tbody>
-		            <tfoot>
-		              <tr>
-		                <th>id</th>
-		                <th>title</th>
-		                <th>short_title</th>
-		                <th>author</th>
-		                <th>owner_uid</th>
-		                <th>create_time</th>
-		                <th>update_time</th>
-		              </tr>
-		            </tfoot>
-		          </table>
-		        </div><!-- /.box-body -->
-		      </div><!-- /.box -->
-		    </div><!-- /.col -->
-		  </div><!-- /.row -->
-		</section><!-- /.content -->
-	</div><!-- /.content-wrapper -->
+            <ol class="breadcrumb">
+                <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                <li><a href="#">Admin</a></li>
+                <li class="active">Article Data List</li>
+            </ol>
+        </section>
+        <!-- Main content -->
+        <section class="content">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="box">
+                        <div class="box-header">
+                            <h3 class="box-title">Article Data List</h3>
+                            <div class="box-tools">
+                                <ul class="pagination pagination-sm no-margin pull-right">
+                                    <div class="btn-group btn-group-sm">
+                                        <button type="button" class="btn btn-default btn-control-box" title="添加" target-box-id="categoryAddBox" exclude-box-id="categoryModifyBox"><i class="fa fa-plus"></i></button>
+                                        <button type="button" class="btn btn-default btn-delete" title="删除"><i class="fa fa-trash"></i></button>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body">
+                            <table id="articleList" class="table table-bordered table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>id</th>
+                                        <th>title</th>
+                                        <th>short_title</th>
+                                        <th>author</th>
+                                        <th>owner_uid</th>
+                                        <th>create_time</th>
+                                        <th>update_time</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th>id</th>
+                                        <th>title</th>
+                                        <th>short_title</th>
+                                        <th>author</th>
+                                        <th>owner_uid</th>
+                                        <th>create_time</th>
+                                        <th>update_time</th>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </section>
+        <!-- /.content -->
+    </div>
+    <!-- /.content-wrapper -->
 </block>
 <block name="js-files">
     <!-- DataTables -->
     <script src="__PUBLIC__/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="__PUBLIC__/plugins/datatables/dataTables.bootstrap.min.js"></script>
-    <!-- SlimScroll -->
-    <script src="__PUBLIC__/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-    <!-- FastClick -->
-    <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
-    <!-- Virgil -->
-    <script src="__PUBLIC__/plugins/virgil/js/virgil.js"></script>
-    <!-- AdminLTE App -->
-    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
     <!-- page script -->
     <script>
-      $(function () {
+    $(function() {
         $('#articleList').DataTable({
-			"serverSide": true,
-		    "ajax": {
-		        url: '{:U("Article/Index/dataList")}',
-		        type: 'POST',
-		        data: function (d) {
-	            }
-		    },
-		    "columns": [
-		    	{"data":"id"},
-		    	{"data":"title"},
-		    	{"data":"short_title"},
-		    	{"data":"author"},
-		    	{"data":"owner_uid"},
-		    	{"data":"create_time","render":function(data){return date('Y-m-d H:i:s',data); }},
-		    	{"data":"update_time","render":function(data){return date('Y-m-d H:i:s',data); }},
-		    ],
-		    "order": [[0,"desc"]],
-			"paging": true,
-			"lengthChange": true,
-			"searching": true,
-			"ordering": true,
-			"info": true,
-			"autoWidth": true
+            "serverSide": true,
+            "ajax": {
+                url: '{:U("Article/Index/dataList")}',
+                type: 'POST',
+                data: function(d) {}
+            },
+            "columns": [{
+                "data": "id"
+            }, {
+                "data": "title"
+            }, {
+                "data": "short_title"
+            }, {
+                "data": "author"
+            }, {
+                "data": "owner_uid"
+            }, {
+                "data": "create_time",
+                "render": function(data) {
+                    return date('Y-m-d H:i:s', data);
+                }
+            }, {
+                "data": "update_time",
+                "render": function(data) {
+                    return date('Y-m-d H:i:s', data);
+                }
+            }, ],
+            "order": [
+                [0, "desc"]
+            ],
+            "paging": true,
+            "lengthChange": true,
+            "searching": true,
+            "ordering": true,
+            "info": true,
+            "autoWidth": true
         });
-      });
+    });
     </script>
 </block>
