--- a/Public/Templates/AdminLTE/html/main-sidebar.html
+++ b/Public/Templates/AdminLTE/html/main-sidebar.html
@@ -1,76 +1,74 @@
 <!-- Left side column. contains the logo and sidebar -->
 <aside class="main-sidebar">
-  <!-- sidebar: style can be found in sidebar.less -->
-  <section class="sidebar">
-    <!-- Sidebar user panel -->
-    <div class="user-panel">
-      <div class="pull-left image">
-        <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-      </div>
-      <div class="pull-left info">
-        <p>{$login_user.username}</p>
-        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-      </div>
-    </div>
-    <!-- search form -->
-    <form action="#" method="get" class="sidebar-form">
-      <div class="input-group">
-        <input type="text" name="q" class="form-control" placeholder="Search...">
-        <span class="input-group-btn">
+    <!-- sidebar: style can be found in sidebar.less -->
+    <section class="sidebar">
+        <!-- Sidebar user panel -->
+        <div class="user-panel">
+            <div class="pull-left image">
+                <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+            </div>
+            <div class="pull-left info">
+                <p>{$login_user.username}</p>
+                <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+            </div>
+        </div>
+        <!-- search form -->
+        <form action="#" method="get" class="sidebar-form">
+            <div class="input-group">
+                <input type="text" name="q" class="form-control" placeholder="Search...">
+                <span class="input-group-btn">
           <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i></button>
         </span>
-      </div>
-    </form>
-    <!-- /.search form -->
-    <!-- sidebar menu: : style can be found in sidebar.less -->
-    <ul class="sidebar-menu">
-      <li class="header">MAIN NAVIGATION</li>
-      <li <if condition="$module eq 'Admin'">class="active treeview"<else />class="treeview"</if>>
-        <a href="#">
-          <i class="fa fa-dashboard"></i> <span>Admin</span> <i class="fa fa-angle-left pull-right"></i>
-        </a>
-        <ul class="treeview-menu">
-          <li <if condition="$module eq 'Admin' AND $controller eq 'Index' AND $action eq 'index'">class="active"</if>><a href="{:U('Admin/Index/index')}"><i class="fa fa-circle-o"></i> Dashboard </a></li>
-          <li <if condition="$module eq 'Admin' AND $controller eq 'User' AND $action eq 'index'">class="active"</if>><a href="{:U('Admin/User/index')}"><i class="fa fa-circle-o"></i> User Manage </a></li>
-          <li <if condition="$module eq 'Admin' AND $controller eq 'User' AND $action eq 'profile'">class="active"</if>><a href="{:U('Admin/User/profile')}"><i class="fa fa-circle-o"></i> User Profile </a></li>
+            </div>
+        </form>
+        <!-- /.search form -->
+        <!-- sidebar menu: : style can be found in sidebar.less -->
+        <ul class="sidebar-menu">
+            <li class="header">MAIN NAVIGATION</li>
+            <li <if condition="$module eq 'Admin'">class="active treeview"
+                <else />class="treeview"</if>>
+                <a href="#">
+                    <i class="fa fa-dashboard"></i> <span>Admin</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li <if condition="$module eq 'Admin' AND $controller eq 'Index'">class="active"</if>><a href="{:U('Admin/Index/index')}"><i class="fa fa-circle-o"></i> Dashboard </a></li>
+                    <li <if condition="$module eq 'Admin' AND $controller eq 'User'">class="active"</if>><a href="{:U('Admin/User/index')}"><i class="fa fa-circle-o"></i> User Manage </a></li>
+                    <li <if condition="$module eq 'Admin' AND $controller eq 'Auth'">class="active"</if>><a href="{:U('Admin/Auth/index')}"><i class="fa fa-circle-o"></i> Auth Manage </a></li>
+                </ul>
+            </li>
+            <li <if condition="$module eq 'File'">class="active treeview"
+                <else />class="treeview"</if>>
+                <a href="#">
+                    <i class="fa fa-files-o"></i> <span>File</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li <if condition="$module eq 'File' AND $controller eq 'Index' AND $action eq 'index'">class="active"</if>><a href="{:U('File/Index/index')}"><i class="fa fa-circle-o"></i> File Folder </a></li>
+                    <li <if condition="$module eq 'File' AND $controller eq 'Media' AND $action eq 'video'">class="active"</if>><a href="{:U('File/Media/video')}"><i class="fa fa-circle-o"></i> Video </a></li>
+                    <li <if condition="$module eq 'File' AND $controller eq 'Media' AND $action eq 'audio'">class="active"</if>><a href="{:U('File/Media/audio')}"><i class="fa fa-circle-o"></i> Audio </a></li>
+                    <li <if condition="$module eq 'File' AND $controller eq 'Media' AND $action eq 'gallery'">class="active"</if>><a href="{:U('File/Media/gallery')}"><i class="fa fa-circle-o"></i> Gallery </a></li>
+                </ul>
+            </li>
+            <li <if condition="$module eq 'Mail'">class="active treeview"
+                <else />class="treeview"</if>>
+                <a href="#">
+                    <i class="fa fa-files-o"></i> <span>Mail</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li <if condition="$module eq 'Mail' AND $controller eq 'Inbox' AND $action eq 'index'">class="active"</if>><a href="{:U('Mail/Inbox/index')}"><i class="fa fa-circle-o"></i> Inbox </a></li>
+                    <li <if condition="$module eq 'Mail' AND $controller eq 'Media' AND $action eq 'video'">class="active"</if>><a href="{:U('Mail/Outbox/index')}"><i class="fa fa-circle-o"></i> Outbox </a></li>
+                </ul>
+            </li>
+            <li <if condition="$module eq 'Article'">class="active treeview"
+                <else />class="treeview"</if>>
+                <a href="#">
+                    <i class="fa fa-files-o"></i> <span>Article</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li <if condition="$module eq 'Article' AND $controller eq 'Index' AND $action eq 'index'">class="active"</if>><a href="{:U('Article/Index/index')}"><i class="fa fa-circle-o"></i> Article </a></li>
+                    <li <if condition="$module eq 'Article' AND $controller eq 'Category' AND $action eq 'index'">class="active"</if>><a href="{:U('Article/Category/index')}"><i class="fa fa-circle-o"></i> Category </a></li>
+                </ul>
+            </li>
         </ul>
-      </li>
-      <li <if condition="$module eq 'File'">class="active treeview"<else />class="treeview"</if>>
-        <a href="#">
-          <i class="fa fa-files-o"></i>
-          <span>File</span>
-          <span class="label label-primary pull-right">4</span>
-        </a>
-        <ul class="treeview-menu">
-          <li <if condition="$module eq 'File' AND $controller eq 'Index' AND $action eq 'index'">class="active"</if>><a href="{:U('File/Index/index')}"><i class="fa fa-circle-o"></i> File Folder </a></li>
-          <li <if condition="$module eq 'File' AND $controller eq 'Media' AND $action eq 'video'">class="active"</if>><a href="{:U('File/Media/video')}"><i class="fa fa-circle-o"></i> Video </a></li>
-          <li <if condition="$module eq 'File' AND $controller eq 'Media' AND $action eq 'audio'">class="active"</if>><a href="{:U('File/Media/audio')}"><i class="fa fa-circle-o"></i> Audio </a></li>
-          <li <if condition="$module eq 'File' AND $controller eq 'Media' AND $action eq 'gallery'">class="active"</if>><a href="{:U('File/Media/gallery')}"><i class="fa fa-circle-o"></i> Gallery </a></li>
-        </ul>
-      </li>
-      <li <if condition="$module eq 'Mail'">class="active treeview"<else />class="treeview"</if>>
-        <a href="#">
-          <i class="fa fa-files-o"></i>
-          <span>Mail</span>
-          <span class="label label-primary pull-right">4</span>
-        </a>
-        <ul class="treeview-menu">
-          <li <if condition="$module eq 'Mail' AND $controller eq 'Inbox' AND $action eq 'index'">class="active"</if>><a href="{:U('Mail/Inbox/index')}"><i class="fa fa-circle-o"></i> Inbox </a></li>
-          <li <if condition="$module eq 'Mail' AND $controller eq 'Media' AND $action eq 'video'">class="active"</if>><a href="{:U('Mail/Outbox/index')}"><i class="fa fa-circle-o"></i> Outbox </a></li>
-        </ul>
-      </li>
-      <li <if condition="$module eq 'Article'">class="active treeview"<else />class="treeview"</if>>
-        <a href="#">
-          <i class="fa fa-files-o"></i>
-          <span>Article</span>
-          <span class="label label-primary pull-right">4</span>
-        </a>
-        <ul class="treeview-menu">
-          <li <if condition="$module eq 'Article' AND $controller eq 'Index' AND $action eq 'index'">class="active"</if>><a href="{:U('Article/Index/index')}"><i class="fa fa-circle-o"></i> Article </a></li>
-          <li <if condition="$module eq 'Article' AND $controller eq 'Category' AND $action eq 'index'">class="active"</if>><a href="{:U('Article/Category/index')}"><i class="fa fa-circle-o"></i> Category </a></li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-  <!-- /.sidebar -->
+    </section>
+    <!-- /.sidebar -->
 </aside>
