--- a/Public/Templates/AdminLTE/html/authIndex.html
+++ b/Public/Templates/AdminLTE/html/authIndex.html
@@ -364,6 +364,225 @@
                 <!-- /.col -->
             </div>
             <!-- /.row -->
+            <div class="row" id="pageNodeRow">
+                <div class="col-xs-12">
+                    <div class="box">
+                        <div class="box-header">
+                            <h3 class="box-title">Page Node List</h3>
+                            <div class="box-tools">
+                                <ul class="pagination pagination-sm no-margin pull-right">
+                                    <div class="btn-group btn-group-sm">
+                                        <button type="button" class="btn btn-default btn-control-box" title="添加" target-box-id="pageNodeAddBox" exclude-box-id="pageNodeModifyBox"><i class="fa fa-plus"></i></button>
+                                        <button type="button" class="btn btn-default btn-delete" title="删除"><i class="fa fa-trash"></i></button>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body">
+                            <table id="pageNodeList" class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>
+                                            <input type="checkbox" class="check-all check">
+                                        </th>
+                                        <th>id</th>
+                                        <th>name</th>
+                                        <th>rulename</th>
+                                        <th>level</th>
+                                        <th>pid</th>
+                                        <th>status</th>
+                                        <th>url</th>
+                                        <th>operate</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th></th>
+                                        <th>
+                                            <input type="checkbox" class="check-all check">
+                                        </th>
+                                        <th>id</th>
+                                        <th>name</th>
+                                        <th>rulename</th>
+                                        <th>level</th>
+                                        <th>pid</th>
+                                        <th>status</th>
+                                        <th>url</th>
+                                        <th>operate</th>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+                <!-- /.col -->
+                <div class="col-xs-6">
+                    <div class="box hidden" id="pageNodeAddBox">
+                        <!-- #categoryAddBox -->
+                        <div class="box-header">
+                            <h3 class="box-title">Add PageNode Data</h3>
+                            <div class="box-tools">
+                                <ul class="pagination pagination-sm no-margin pull-right">
+                                    <div class="btn-group btn-group-sm">
+                                        <button type="button" class="btn btn-default btn-close-box" title="关闭" id=""><i class="fa fa-close"></i></button>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <form class="form-horizontal" action="{:U('Admin/Auth/modifyPageNode')}" method="post">
+                            <div class="box-body">
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Node Name</label>
+                                    <div class="col-sm-10">
+                                        <input name="name" class="form-control" placeholder="Name" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Rule Name</label>
+                                    <div class="col-sm-10">
+                                        <input name="rulename" class="form-control" placeholder="Rule Name" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Level</label>
+                                    <div class="col-sm-10">
+                                        <select name="rules" class="form-control select2" style="width: 100%;">
+                                            <option value="1" selected="selected">Menu</option>
+                                            <option>title</option>
+                                            <option>California</option>
+                                            <option>Delaware</option>
+                                            <option>Tennessee</option>
+                                            <option>Texas</option>
+                                            <option>Washington</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Parent Node</label>
+                                    <div class="col-sm-10">
+                                        <select name="pid" class="form-control select2" style="width: 100%;">
+                                            <option value="0" selected="selected">As Top</option>
+                                            <option>title</option>
+                                            <option>California</option>
+                                            <option>Delaware</option>
+                                            <option>Tennessee</option>
+                                            <option>Texas</option>
+                                            <option>Washington</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Status</label>
+                                    <div class="col-sm-10">
+                                        <input type="radio" class="form-control minimal" name="status" value="0"> 不开放
+                                        <input type="radio" class="form-control minimal" name="status" value="1" checked=""> 开放
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">URL</label>
+                                    <div class="col-sm-10">
+                                        <input name="url" class="form-control" placeholder="URL" type="text">
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.box-body -->
+                            <div class="box-footer">
+                                <button type="button" class="btn btn-default">Cancel</button>
+                                <button type="submit" class="btn btn-info pull-right">Submit</button>
+                            </div>
+                            <!-- /.box-footer -->
+                        </form>
+                    </div>
+                    <!-- /.box -->
+                    <div class="box hidden" id="pageNodeModifyBox">
+                        <!-- #categoryModifyBox -->
+                        <div class="box-header">
+                            <h3 class="box-title">Modify PageNode Data</h3>
+                            <div class="box-tools">
+                                <ul class="pagination pagination-sm no-margin pull-right">
+                                    <div class="btn-group btn-group-sm">
+                                        <button type="button" class="btn btn-default btn-close-box" title="关闭" id=""><i class="fa fa-close"></i></button>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <form class="form-horizontal" action="{:U('Admin/Auth/modifyPageNode')}" method="post">
+                            <div class="box-body">
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Node Name</label>
+                                    <div class="col-sm-10">
+                                        <input name="name" class="form-control" placeholder="Name" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Rule Name</label>
+                                    <div class="col-sm-10">
+                                        <input name="rulename" class="form-control" placeholder="Rule Name" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Level</label>
+                                    <div class="col-sm-10">
+                                        <select name="rules" class="form-control select2" style="width: 100%;">
+                                            <option value="1" selected="selected">Menu</option>
+                                            <option>title</option>
+                                            <option>California</option>
+                                            <option>Delaware</option>
+                                            <option>Tennessee</option>
+                                            <option>Texas</option>
+                                            <option>Washington</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Parent Node</label>
+                                    <div class="col-sm-10">
+                                        <select name="pid" class="form-control select2" style="width: 100%;">
+                                            <option value="0" selected="selected">As Top</option>
+                                            <option>title</option>
+                                            <option>California</option>
+                                            <option>Delaware</option>
+                                            <option>Tennessee</option>
+                                            <option>Texas</option>
+                                            <option>Washington</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">Status</label>
+                                    <div class="col-sm-10">
+                                        <input type="radio" class="form-control minimal" name="status" value="0"> 不开放
+                                        <input type="radio" class="form-control minimal" name="status" value="1" checked=""> 开放
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">URL</label>
+                                    <div class="col-sm-10">
+                                        <input name="url" class="form-control" placeholder="URL" type="text">
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.box-body -->
+                            <div class="box-footer">
+                                <button type="submit" class="btn btn-default">Cancel</button>
+                                <button type="submit" class="btn btn-info pull-right">Submit</button>
+                            </div>
+                            <!-- /.box-footer -->
+                        </form>
+                    </div>
+                    <!-- /.box -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
         </section>
         <!-- /.content -->
     </div>
@@ -373,6 +592,8 @@
     <!-- DataTables -->
     <script src="__PUBLIC__/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="__PUBLIC__/plugins/datatables/dataTables.bootstrap.min.js"></script>
+    <!-- bootstrap-treeview -->
+    <script src="__PUBLIC__/plugins/bootstrap-treeview/bootstrap-treeview.js"></script>
     <!-- page script -->
     <script>
     $(function() {
@@ -413,7 +634,7 @@
             });
         });
 
-		$('#authRuleList ').DataTable({
+		$('#authRuleList').DataTable({
 			"serverSide": true,
 			"ajax": {
 				url: '{:U("Admin/Auth/authRuleList")}',
@@ -451,6 +672,68 @@
                 radioClass: 'iradio_flat-green'
             });
         });
+        
+        $('#pageNodeList').DataTable({
+            "serverSide": true,
+            "ajax": {
+                url: '{:U("Admin/Auth/pageNodeList")}',
+                type: 'POST', 
+                data: function(d) {}
+            },
+            "columns": [
+                {
+                    "className": 'details-control',
+                    "orderable": false,
+                    "data": null,
+                    "defaultContent": '<button type="button" class="btn btn-default" title="chlidren"><i class="fa fa-angle-right"></i></button>'
+                },
+                {"data": "id", "orderable": false, "render": function(data) {
+                    return '<input type="checkbox" class="check-single check" name="" rel="' + data + '">';
+                }},
+                {"data": "id"},
+                {"data": "name"},
+                {"data": "rulename"},
+                {"data": "level"},
+                {"data": "pid"},
+                {"data": "status", "render": function(data) {return data == 0 ? '未启用 ': '启用 '; } },
+                {"data": "url"},
+                {"data": "id", "orderable": false, "render": function(data, type, row, meta) {
+                        var string = '';
+                        string += '<button type="button" class="btn btn-default btn-control-box" title="编辑" target-box-id="pageNodeModifyBox" exclude-box-id="pageNodeAddBox"><i class="fa fa-edit"></i></button>';
+                        string += '<button type="button" class="btn btn-default btn-control-box" title="详情"><i class="fa fa-info"></i></button>';
+                        string = '<div class="btn-group btn-group-sm">' + string + '</div>';
+                        return string
+                }}
+            ], 
+            "order": [[2, "desc"]], 
+            "paging": true, 
+            "lengthChange": true, 
+            "searching": true, 
+            "ordering": true, 
+            "info": true, 
+            "autoWidth": true
+        }).on('draw.dt', function() {
+            $('input[type="checkbox"], input[type="radio"]').iCheck({
+                checkboxClass: 'icheckbox_flat-green',
+                radioClass: 'iradio_flat-green'
+            });
+        });
+        $('#pageNodeList tbody').on('click', 'td.details-control', function () {
+            var table = $('#pageNodeList').DataTable();
+            var tr = $(this).closest('tr');
+            var row = table.row( tr );
+     
+            if ( row.child.isShown() ) {
+                // This row is already open - close it
+                row.child.hide();
+                tr.removeClass('shown');
+            }
+            else {
+                // Open this row
+                row.child( format(row.data()) ).show();
+                tr.addClass('shown');
+            }
+        } );
     });
     </script>
 </block>
