--- a/Public/Templates/AdminLTE/html/articleList.html
+++ b/Public/Templates/AdminLTE/html/articleList.html
@@ -97,7 +97,7 @@
         $('#articleList').DataTable({
             "serverSide": true,
             "ajax": {
-                url: '{:U("Article/Index/dataList")}',
+                url: '{:U("Admin/Article/dataList")}',
                 type: 'POST',
                 data: function(d) {}
             },
