--- a/Public/Templates/AdminLTE/html/video.html
+++ b/Public/Templates/AdminLTE/html/video.html
@@ -1,5 +1,5 @@
 <extend name="Public/Templates/AdminLTE/html/base.html" />
-<block name="title">AdminLTE 2 | Media Audio</block>
+<block name="title">AdminLTE 2 | Media Video</block>
 <block name="css-files">
     <!-- Bootstrap 3.3.5 -->
     <link rel="stylesheet" href="__PUBLIC__/plugins/bootstrap/css/bootstrap.min.css">
@@ -21,13 +21,13 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-        Media Audio
-        <small>audio</small>
+        Media Video
+        <small>video</small>
       </h1>
             <ol class="breadcrumb">
                 <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
                 <li><a href="#">Media</a></li>
-                <li class="active">Audio</li>
+                <li class="active">Video</li>
             </ol>
         </section>
         <!-- Main content -->
