--- a/Public/Templates/AdminLTE/html/gallery.html
+++ b/Public/Templates/AdminLTE/html/gallery.html
@@ -16,112 +16,108 @@
     <link rel="stylesheet" href="__PUBLIC__/Templates/AdminLTE/css/skins/_all-skins.min.css">
 </block>
 <block name="content-wrapper">
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <h1>
         Media Gallery
         <small>gallery</small>
       </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">Media</a></li>
-        <li class="active">Gallery</li>
-      </ol>
-    </section>
-
+            <ol class="breadcrumb">
+                <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                <li><a href="#">Media</a></li>
+                <li class="active">Gallery</li>
+            </ol>
+        </section>
         <!-- Main content -->
         <section class="content">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="nav-tabs-custom">
-                <ul class="nav nav-tabs">
-                  <li class="active"><a href="#Image" data-toggle="tab">Image</a></li>
-                  <li><a href="#Audio" data-toggle="tab">Audio</a></li>
-                  <li><a href="#Video" data-toggle="tab">Video</a></li>
-                </ul>
-                <div class="tab-content">
-                  <div class="active tab-pane" id="Image">
-                    
+            <div class="row">
+                <div class="col-md-12">
                     <div class="row">
-                      <volist name="list" id="vo" mod="6">
-                        <a data-gallery="" href="{$vo.url}" title="Living on the edge"><img class="img-thumbnail" style="height:200px;" src="{$vo.url}"></a>
-                      </volist>
-                      <!-- <a data-gallery="" href="__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4" title="Sintel" type="video/mp4" data-poster="__PUBLIC__/Templates/AdminLTE/img/gallery/1.jpg" data-sources='[{"href": "__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4", "type": "video/mp4"}]'><video class="img-thumbnail" style="height:200px;" src="__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4" poster="__PUBLIC__/Templates/AdminLTE/img/gallery/1.jpg" controls=""></video></a>
+                        <volist name="list" id="vo" mod="6">
+                            <a data-gallery="" href="{$vo.url}" title="Living on the edge"><img class="img-thumbnail" style="height:200px;" src="{$vo.url}"></a>
+                        </volist>
+                        <!-- <a data-gallery="" href="__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4" title="Sintel" type="video/mp4" data-poster="__PUBLIC__/Templates/AdminLTE/img/gallery/1.jpg" data-sources='[{"href": "__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4", "type": "video/mp4"}]'><video class="img-thumbnail" style="height:200px;" src="__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4" poster="__PUBLIC__/Templates/AdminLTE/img/gallery/1.jpg" controls=""></video></a>
                       <a data-gallery="" href="__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4" title="Sintel" type="video/mp4" data-poster="__PUBLIC__/Templates/AdminLTE/img/gallery/1.jpg" data-sources='[{"href": "__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4", "type": "video/mp4"}]'><video class="img-thumbnail" style="height:200px;" src="__PUBLIC__/Templates/AdminLTE/img/gallery/1.mp4" poster="__PUBLIC__/Templates/AdminLTE/img/gallery/1.jpg" controls=""></video></a> -->
                     </div>
-                    
                     <div class="row">
-                      <!-- The container for the list of example images -->
-                      <div class="col-sm-4 col-md-2">
-                        <form action="{:U('File/Upload/image')}" method="post" role="form" enctype="multipart/form-data" id="uploadForm" class="form-horizontal">
-                          <input type="file" accept="image/*" name="file">
-                          <input type="submit" value="确定" id="uploadBtn" class="btn btn-primary">
-                        </form>
-                        <div class="progress">
-                            <div class="bar"></div>
-                            <div class="percent">0%</div>
+                        <!-- The container for the list of example images -->
+                        <div class="col-sm-4 col-md-2">
+                            <form action="{:U('Admin/Upload/image')}" method="post" role="form" enctype="multipart/form-data" id="uploadForm" class="form-horizontal">
+                                <input type="file" accept="image/*" name="file">
+                                <input type="submit" value="确定" id="uploadBtn" class="btn btn-primary">
+                            </form>
+                            <div class="progress">
+                                <div class="bar"></div>
+                                <div class="percent">0%</div>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                  </div><!-- /.tab-pane -->
-                  <div class="tab-pane" id="Audio">
-                  </div><!-- /.tab-pane -->
-
-                  <div class="tab-pane" id="Video">
-                  </div><!-- /.tab-pane -->
-                </div><!-- /.tab-content -->
-              </div><!-- /.nav-tabs-custom -->
-            </div><!-- /.col -->
-          </div><!-- /.row -->
-        </section><!-- /.content -->
-
-  </div><!-- /.content-wrapper -->
-
-  <style>
-    .progress { position:relative; border: 1px solid #ddd; padding: 1px; border-radius: 3px; }
-    .bar { background-color: #B4F5B4; width:0%; height:20px; border-radius: 3px; }
-    .percent { position:absolute; display:inline-block; top:3px; left:48%; }
-  </style>
-
-  <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
-  <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
-      <!-- The container for the modal slides -->
-      <div class="slides"></div>
-      <!-- Controls for the borderless lightbox -->
-      <h3 class="title"></h3>
-      <a class="prev">‹</a>
-      <a class="next">›</a>
-      <a class="close">×</a>
-      <a class="play-pause"></a>
-      <ol class="indicator"></ol>
-      <!-- The modal dialog, which will be used to wrap the lightbox content -->
-      <div class="modal fade">
-          <div class="modal-dialog modal-lg">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <button type="button" class="close" aria-hidden="true">&times;</button>
-                      <h4 class="modal-title"></h4>
-                  </div>
-                  <div class="modal-body next"></div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-default pull-left prev">
-                          <i class="glyphicon glyphicon-chevron-left"></i>
-                          Previous
-                      </button>
-                      <button type="button" class="btn btn-primary next">
-                          Next
-                          <i class="glyphicon glyphicon-chevron-right"></i>
-                      </button>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </section>
+        <!-- /.content -->
+    </div>
+    <!-- /.content-wrapper -->
+    <style>
+    .progress {
+        position: relative;
+        border: 1px solid #ddd;
+        padding: 1px;
+        border-radius: 3px;
+    }
+    
+    .bar {
+        background-color: #B4F5B4;
+        width: 0%;
+        height: 20px;
+        border-radius: 3px;
+    }
+    
+    .percent {
+        position: absolute;
+        display: inline-block;
+        top: 3px;
+        left: 48%;
+    }
+    </style>
+    <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+    <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+        <!-- The container for the modal slides -->
+        <div class="slides"></div>
+        <!-- Controls for the borderless lightbox -->
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="close">×</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+        <!-- The modal dialog, which will be used to wrap the lightbox content -->
+        <div class="modal fade">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title"></h4>
+                    </div>
+                    <div class="modal-body next"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default pull-left prev">
+                            <i class="glyphicon glyphicon-chevron-left"></i> Previous
+                        </button>
+                        <button type="button" class="btn btn-primary next">
+                            Next
+                            <i class="glyphicon glyphicon-chevron-right"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </block>
-
 <block name="js-files">
     <!-- blueimp-gallery 2.21.3 -->
     <script src="__PUBLIC__/plugins/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
@@ -131,32 +127,32 @@
     <script src="__PUBLIC__/plugins/jQuery.layer/layer/layer.js"></script>
     <!-- page script -->
     <script>
-    $(function () {
-      $('#blueimp-gallery').data('useBootstrapModal', false);
-      var bar = $('.bar');
-      var percent = $('.percent');
-      $('#uploadForm').ajaxForm({
-          beforeSend: function() {
-              var percentVal = '0%';
-              bar.width(percentVal);
-              percent.html(percentVal);
-          },
-          uploadProgress: function(event, position, total, percentComplete) {
-              var percentVal = percentComplete + '%';
-              bar.width(percentVal)
-              percent.html(percentVal);
-          },
-          success: function(retJson) {
-              var percentVal = '100%';
-              bar.width(percentVal)
-              percent.html(percentVal);
-              layer.msg(retJson.info);
-              window.location.reload();
-          },
-          complete: function(xhr) {
+    $(function() {
+        $('#blueimp-gallery').data('useBootstrapModal', false);
+        var bar = $('.bar');
+        var percent = $('.percent');
+        $('#uploadForm').ajaxForm({
+            beforeSend: function() {
+                var percentVal = '0%';
+                bar.width(percentVal);
+                percent.html(percentVal);
+            },
+            uploadProgress: function(event, position, total, percentComplete) {
+                var percentVal = percentComplete + '%';
+                bar.width(percentVal)
+                percent.html(percentVal);
+            },
+            success: function(retJson) {
+                var percentVal = '100%';
+                bar.width(percentVal)
+                percent.html(percentVal);
+                layer.msg(retJson.info);
+                window.location.reload();
+            },
+            complete: function(xhr) {
 
-          }
-      }); 
+            }
+        });
 
     })
     </script>
